<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/searchview_bg"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <LinearLayout
            android:id="@+id/Checkin_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="7dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:src="@drawable/search_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/search"
                android:textColor="#666666"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_activity_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/register_bg" />
    
   <!--  <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/text_grey"/> -->

    <RadioGroup
        android:id="@+id/main_activity_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@color/main_tab_bg"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/main_activity_myroom_rb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_myroom_rb_selector"
            android:gravity="center"
            android:text="@string/main_tab_myroom" />

        <RadioButton
            android:id="@+id/main_activity_myexpert_rb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_expertlist_rb_selector"
            android:gravity="center"
            android:text="@string/main_tab_expert"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/main_activity_myinfo_rb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/tab_myinfo_rb_selector"
            android:gravity="center"
            android:text="@string/main_tab_myinfo" />
    </RadioGroup>

</LinearLayout>